Code cleanup (#400)